--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -41,7 +41,7 @@
           <td>{{data.groupType}}</td>
           <td>{{data.tourType}}</td>
           <td>
-            <button class="btn" color="info" style="margin: auto;" (click)="contactTourist(data._id)" mdbBtn type="button" size="sm" mdbWavesEffect>
+            <button class="btn" color="info" style="margin: auto;" (click)="contactTourist(data.touristId.email)" mdbBtn type="button" size="sm" mdbWavesEffect>
               <b>CONTACT TOURIST</b>
             </button>
           </td>
