--- a/src/app/modules/tourists/components/messages/messages.component.html
+++ b/src/app/modules/tourists/components/messages/messages.component.html
@@ -1,3 +1,11 @@
-<p>
-    messages works!
-</p>
+<div class="container mt-5" >
+    <div class="row chatRow">
+        <div class="col-sm-3">
+            <app-chat-history-list></app-chat-history-list>
+        </div>
+        <div class="col-sm-9">
+            <app-chats></app-chats>
+        </div>
+        
+    </div>
+</div>
