--- a/src/app/shared/components/deals-cards/deals-cards.component.html
+++ b/src/app/shared/components/deals-cards/deals-cards.component.html
@@ -2,7 +2,8 @@
   <div class="col-md-4" *ngFor="let deal of dealsList">
     <mdb-card>
       <div class="img-fav">
-          <i class="far fa-heart fa-lg pink-text" ></i>
+          <i *ngIf="!deal.isFavourite" (click)="addToFavourite(deal)" class="far fa-heart fa-lg pink-text" ></i>
+          <i *ngIf="deal.isFavourite" (click)="removeFromFavourite(deal)" class="fas fa-heart fa-lg pink-text" ></i>
           <!--Card image-->
           <mdb-card-img class="main-img" src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
           <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
@@ -21,8 +22,94 @@
               <div>&#x20b9;{{deal.price}} pp &#8226; From {{deal.startDate | date: 'dd-MM-yy'}} &#8226; To {{deal.endDate | date: 'dd-MM-yy'}}</div>
           </mdb-card-text>
 
-          <a mdbBtn color="primary" mdbWavesEffect>Book Deal</a>
+          <a mdbBtn color="primary" (click)="openModal1(dealTour, deal)" mdbWavesEffect>Book Deal</a>
       </mdb-card-body>
   </mdb-card>
   </div>
 </div>
+
+
+
+
+
+<!--Modal: Login with Avatar Form-->
+<div mdbModal #dealTour="mdbModal" class="modal fade" id="modalLoginAvatar" tabindex="-1" role="dialog" aria-labelledby="mytourLabel" aria-hidden="true">
+    <div class="modal-dialog cascading-modal modal-avatar " role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!-- <form [formGroup]="personalBooking" (ngSubmit)="submitPersonalBooking()"> -->
+            <!--Header-->
+            <div class="modal-header">
+                <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
+            </div>
+            <!--Body-->
+            <div class="modal-body text-center mb-1">
+
+                <h5 class="mt-1 mb-3">Hi! Lets personalize your experience</h5>
+                <hr mx-3>
+                <h5 class="text-left black-text">Tell me your preferred Date</h5>
+                <div class="row form-inline">
+                </div>
+                    
+                </div>
+                <div class="text-center mt-4">
+                    <button (click)="openModal2(dealTour2)" type="button" class="btn btn-cyan mt-1">Request a personalized Tour</button>
+                </div>
+            
+        <!-- </form> -->
+    </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!--Modal: Login with Avatar Form-->
+
+
+<!--Modal: Login with Avatar Form-->
+<div mdbModal #dealTour2="mdbModal" class="modal fade" id="modalLoginAvatar" tabindex="-1" role="dialog" aria-labelledby="mytourLabel2" aria-hidden="true">
+    <div class="modal-dialog cascading-modal modal-avatar " role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!-- <form [formGroup]="personalBooking" (ngSubmit)="submitPersonalBooking()"> -->
+            <!--Header-->
+            <div class="modal-header">
+                <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
+            </div>
+            <!--Body-->
+            <div class="modal-body text-center mb-1">
+
+                <h5 class="mt-1 mb-3">Hi! Lets personalize your experience</h5>
+                <hr mx-3>
+                <h5 class="text-left black-text">Tell me your preferred Date</h5>
+                <form [formGroup]="dealForm" (ngSubmit)="submitDealForm()">
+                    <div class="row">
+                        <div class="col">
+                            <div class="form-group">
+                                <select formControlName="groupType" class="form-control">
+                                    <option value="" disabled>Select</option>
+                                    <option *ngFor="let item of groupTypesList" [value]="item">{{item}}</option>
+                                </select>
+                            </div>
+    
+                            <!-- <input type="number" mdbInput class="form-control" placeholder="Adults"> -->
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                            <input type="number" formControlName="noOfPeople" class="form-control" placeholder="no of people">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center mt-4">
+                        <button type="submit" class="btn btn-cyan mt-1">Book</button>
+                    </div>
+    
+                </form>
+                    
+                </div>
+                
+            
+        <!-- </form> -->
+    </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!--Modal: Login with Avatar Form-->
