--- a/src/app/modules/guide/pages/show-register/show-register.component.html
+++ b/src/app/modules/guide/pages/show-register/show-register.component.html
@@ -107,7 +107,7 @@
         <div class="col-4 px-3">
             <div class="text-left" style=" position:relative; font-size:65px; font-weight: 800;">1
 
-                <strong style="position:absolute; font-size:30px; font-weight: 200;">Create your Withlocals account</strong>
+                <strong style="position:absolute; font-size:30px; font-weight: 200;">Create your Voila account</strong>
             </div>
 
             <div style="font-size:18px;">
@@ -136,7 +136,7 @@
     <div class="row">
         <div class="col-4 px-4">
             <div>
-                <strong style="font-size:20px;">Withlocals Originals</strong>
+                <strong style="font-size:20px;">Voila Originals</strong>
                 <div>
                     Join one of our best-selling tours, created by Withlocals and hosted by multiple hosts. This is the perfect way to kickstart your hosting experience.
                 </div>
