--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -1,3 +1,6 @@
+<app-header [loggingIn]="true"></app-header>
+
+
 <div class="row" style="margin: 50px;">
   <div class="col-md-12">
     <!-- <div class="card">
