--- a/src/app/shared/components/chats/chats.component.html
+++ b/src/app/shared/components/chats/chats.component.html
@@ -56,11 +56,11 @@
     <div class="row">
       <div class="col-sm-10 px-0">
         <form>
-          <textarea name="message" [(ngModel)]="message" class="form-control"></textarea>
+          <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
         </form>
       </div>
       <div class="col-sm-2 px-0">
-        <button class="form-control btn btn-success" (click)="sendMessage()">Send</button>
+        <button type="submit" class="form-control btn btn-success" (click)="sendMessage()">Send</button>
       </div>
     </div>
   </div>
