--- a/src/app/modules/home/top-deals/top-deals.component.html
+++ b/src/app/modules/home/top-deals/top-deals.component.html
@@ -103,110 +103,122 @@
         </mdb-card>
     </div>
 </div>
-<div class="row mt-5 mx-2">
-    <div class="col-md-4">
-        <!-- Card -->
+<br>
+<br>
+<!-- deales of the day -->
+<section style="background-color: rgb(56,50,48);">
+  <div class="row">
+     <div class="col-5">
+    <img src="assets/images/dealimg.png" class="img-fluid " alt="">
+  </div>
+  <div class="col-7 deal-text">
+      <!-- <h1>Select from our hot deals</h1> -->
 
+    <h1><p>select from wide range of hand picked deals by our experts and explore the world with us
+      through our selected hot deals
+    </p></h1>
+    <mdb-carousel [animation]="'slide'">
+      <mdb-carousel-item>
         <div class="card deal-card">
-            <div class="row">
-                <div class="col-3">
-                    <!-- Card image -->
-                    <img class="deal-img card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
-                </div>
+          <div class="row">
+              <div class="col-4">
+                  <!-- Card image -->
+                  <img class="deal-img card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+              </div>
 
-                <div class="col-9 pl-3">
-                    <!-- Card content -->
-                    <div class="card-body">
+              <div class="col-8 pl-3">
+                  <!-- Card content -->
+                  <div class="card-body">
 
-                        <!-- Title -->
-                        <h5 class="card-title"><strong>Darjeeling City Tour</strong></h5>
-                        <!-- Text -->
-                        <hr class="px-3 py-0 ml-0" style="width:60px; border-top: 1px solid deeppink;">
-                        <div class="card-text mt-0 pt-0 black-text">
-                            <!-- <div>&#x20b9;1200 pp</div> -->
-                            <div><i class="far fa-calendar-alt"></i> 2 days tour</div>
-                            <div>Choose your guide from 8+ local guides</div>
+                      <!-- Title -->
+                      <h2 class="card-title"><strong>Darjeeling City Tour</strong></h2>
+                      <!-- Text -->
+                      <hr class="px-3 py-0 ml-0" style="width:60px; border-top: 1px solid deeppink;">
+                      <div class="card-text mt-0 pt-0 black-text">
+                          <!-- <div>&#x20b9;1200 pp</div> -->
+                          <div><i class="far fa-calendar-alt"></i> 2 days tour</div>
+                          <div>Choose your guide from 8+ local guides</div>
 
-                        </div>
-                        <!-- Button -->
-                        <!-- <a href="#" class="btn btn-primary">Button</a> -->
+                      </div>
+                      <!-- Button -->
+                      <!-- <a href="#" class="btn btn-primary">Button</a> -->
 
-                    </div>
-                </div>
-            </div>
+                  </div>
+              </div>
+          </div>
 
-            <a href="https://mdbootstrap.com/education/bootstrap/quick-start/" class="stretched-link text-right pb-0 mb-3 px-3 text-decoration-none"><strong>Know More</strong></a>
+          <a href="https://mdbootstrap.com/education/bootstrap/quick-start/" class="stretched-link text-right pb-0 mb-3 px-3 text-decoration-none"><strong>Know More</strong></a>
 
-        </div>
-        <!-- Card -->
-    </div>
-    <div class="col-md-4">
+      </div>
+      </mdb-carousel-item>
+      <mdb-carousel-item>
         <div class="card deal-card">
-            <div class="row">
-                <div class="col-3">
-                    <!-- Card image -->
-                    <img class="deal-img card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
-                </div>
+          <div class="row">
+              <div class="col-4">
+                  <!-- Card image -->
+                  <img class="deal-img card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+              </div>
 
-                <div class="col-9 pl-3">
-                    <!-- Card content -->
-                    <div class="card-body">
+              <div class="col-8 pl-3">
+                  <!-- Card content -->
+                  <div class="card-body">
 
-                        <!-- Title -->
-                        <h5 class="card-title"><strong>Darjeeling City Tour</strong></h5>
-                        <!-- Text -->
-                        <hr class="px-3 py-0 ml-0" style="width:60px; border-top: 1px solid deeppink;">
-                        <div class="card-text mt-0 pt-0 black-text">
-                            <!-- <div>&#x20b9;1200 pp</div> -->
-                            <div><i class="far fa-calendar-alt"></i> 2 days tour</div>
-                            <div>Choose your guide from 8+ local guides</div>
+                      <!-- Title -->
+                      <h2 class="card-title"><strong>Darjeeling City Tour</strong></h2>
+                      <!-- Text -->
+                      <hr class="px-3 py-0 ml-0" style="width:60px; border-top: 1px solid deeppink;">
+                      <div class="card-text mt-0 pt-0 black-text">
+                          <!-- <div>&#x20b9;1200 pp</div> -->
+                          <div ><i class="far fa-calendar-alt"></i> 2 days tour</div>
+                          <div>Choose your guide from 8+ local guides</div>
 
-                        </div>
-                        <!-- Button -->
-                        <!-- <a href="#" class="btn btn-primary">Button</a> -->
+                      </div>
+                      <!-- Button -->
+                      <!-- <a href="#" class="btn btn-primary">Button</a> -->
 
-                    </div>
-                </div>
-            </div>
+                  </div>
+              </div>
+          </div>
 
-            <a href="https://mdbootstrap.com/education/bootstrap/quick-start/" class="stretched-link text-right mb-3 px-3 text-decoration-none"><strong>Know More</strong></a>
+          <a href="https://mdbootstrap.com/education/bootstrap/quick-start/" class="stretched-link text-right pb-0 mb-3 px-3 text-decoration-none"><strong>Know More</strong></a>
 
-        </div>
-        <!-- Card -->
-    </div>
-    <div class="col-md-4">
-
-
+      </div></mdb-carousel-item>
+      <mdb-carousel-item>
         <div class="card deal-card">
-            <div class="row">
-                <div class="col-3">
-                    <!-- Card image -->
-                    <img class="deal-img card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
-                </div>
+          <div class="row">
+              <div class="col-4">
+                  <!-- Card image -->
+                  <img class="deal-img card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+              </div>
 
-                <div class="col-9 pl-3">
-                    <!-- Card content -->
-                    <div class="card-body">
+              <div class="col-8 pl-3">
+                  <!-- Card content -->
+                  <div class="card-body">
 
-                        <!-- Title -->
-                        <h5 class="card-title"><strong>Darjeeling City Tour</strong></h5>
-                        <!-- Text -->
-                        <hr class="px-3 py-0 ml-0" style="width:60px; border-top: 1px solid deeppink;">
-                        <div class="card-text mt-0 pt-0 black-text">
-                            <div><i class="far fa-calendar-alt"></i> 2 days tour</div>
-                            <div>Choose your guide from 8+ local guides</div>
-                            <!-- &#x20b9;1200 pp -->
-                        </div>
-                        <!-- Button -->
-                        <!-- <a href="#" class="btn btn-primary">Button</a> -->
+                      <!-- Title -->
+                      <h2 class="card-title"><strong>Darjeeling City Tour</strong></h2>
+                      <!-- Text -->
+                      <hr class="px-3 py-0 ml-0" style="width:60px; border-top: 1px solid deeppink;">
+                      <div class="card-text mt-0 pt-0 black-text">
+                          <!-- <div>&#x20b9;1200 pp</div> -->
+                          <div><i class="far fa-calendar-alt"></i> 2 days tour</div>
+                          <div>Choose your guide from 8+ local guides</div>
 
-                    </div>
-                </div>
-            </div>
+                      </div>
+                      <!-- Button -->
+                      <!-- <a href="#" class="btn btn-primary">Button</a> -->
 
-            <a href="https://mdbootstrap.com/education/bootstrap/quick-start/" class="stretched-link text-right pb-0 mb-3 px-3 text-decoration-none"><strong>Know More</strong></a>
+                  </div>
+              </div>
+          </div>
 
-        </div>
-    </div>
-    <!-- Card -->
-</div>
+          <a href="https://mdbootstrap.com/education/bootstrap/quick-start/" class="stretched-link text-right  pb-0 mb-3 px-3 text-decoration-none"><strong>Know More</strong></a>
+
+      </div>
+    </mdb-carousel-item>
+    </mdb-carousel>
+  </div>
+  </div>
+</section>
+
+<br><br>
