--- a/src/app/modules/guide/pages/register/register.component.html
+++ b/src/app/modules/guide/pages/register/register.component.html
@@ -1,21 +1,19 @@
-<wizard #wizard class="arc-wizard background" navBarLayout="large-empty-symbols">
+<wizard #wizard class="arc-wizard background" navBarLayout="large-filled-symbols">
 
-  <wizard-step stepTitle="Pertional Details">
+  <wizard-step stepTitle="Pertional Details" navigationSymbol="1">
     <app-personal-details (personalData)="getPersonalData($event)"></app-personal-details>
   </wizard-step>
 
-  <wizard-step stepTitle="Title of step 2">
-    <app-bussiness-details (basicData)="getBasicData($event)" (languageData)="getLanguageData($event)" 
+  <wizard-step stepTitle="Title of step 2" navigationSymbol="2">
+    <app-bussiness-details (basicData)="getBasicData($event)" (languageData)="getLanguageData($event)"
       (interestData)="getInterestData($event)" (experienceData)="getExperienceData($event)"
     ></app-bussiness-details>
   </wizard-step>
 
-  <!-- <wizard-step stepTitle="Title of step 3">
-    <app-question-details></app-question-details>
-  </wizard-step> -->
-
-  <wizard-step stepTitle="Title of step 3">
+  <wizard-step stepTitle="Title of step 3" navigationSymbol="3">
     <app-terms-conditions (tc)="finalSubmit()"></app-terms-conditions>
   </wizard-step>
-
+<br><br><br>
 </wizard>
+
+<!-- mdb test -->
