--- a/src/app/modules/guide/pages/register/register.component.scss
+++ b/src/app/modules/guide/pages/register/register.component.scss
@@ -1,3 +1,4 @@
+
 .pannel{
     margin: auto;
     width: 80%;
@@ -10,7 +11,7 @@
 .svg svg{
     // height: 80%;
     width: 350px;
-   
+
 }
 .svg1{
     height: 120%;
@@ -19,9 +20,6 @@
     box-shadow: 0px 3px 41px 2px rgba(252,252,252,1);
 }
 .background{
-   background-image: url(https://images.unsplash.com/photo-1587443270282-176e0bf1fc79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);
-   background-position: center center; 
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover;
-  height: auto; 
+  background-image: linear-gradient(45deg, rgba(254, 246, 210, 0.53) 0%, rgba(254, 246, 210, 0.53) 14.286%,rgba(221, 240, 216, 0.53) 14.286%, rgba(221, 240, 216, 0.53) 28.572%,rgba(188, 233, 223, 0.53) 28.572%, rgba(188, 233, 223, 0.53) 42.858%,rgba(156, 227, 229, 0.53) 42.858%, rgba(156, 227, 229, 0.53) 57.144%,rgba(123, 220, 235, 0.53) 57.144%, rgba(123, 220, 235, 0.53) 71.42999999999999%,rgba(90, 214, 242, 0.53) 71.43%, rgba(90, 214, 242, 0.53) 85.71600000000001%,rgba(57, 207, 248, 0.53) 85.716%, rgba(57, 207, 248, 0.53) 100.002%),linear-gradient(135deg, rgb(246, 99, 200) 0%, rgb(246, 99, 200) 12.5%,rgb(223, 98, 196) 12.5%, rgb(223, 98, 196) 25%,rgb(199, 97, 192) 25%, rgb(199, 97, 192) 37.5%,rgb(176, 96, 188) 37.5%, rgb(176, 96, 188) 50%,rgb(152, 95, 184) 50%, rgb(152, 95, 184) 62.5%,rgb(129, 94, 180) 62.5%, rgb(129, 94, 180) 75%,rgb(105, 93, 176) 75%, rgb(105, 93, 176) 87.5%,rgb(82, 92, 172) 87.5%, rgb(82, 92, 172) 100%);  height: auto;
 }
+
