--- a/src/app/modules/home/top-deals/top-deals.component.scss
+++ b/src/app/modules/home/top-deals/top-deals.component.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @media (min-width: 768px) {
     mdb-card {
         height: 210px;
@@ -5,16 +6,36 @@
 }
 
 .deal-card {
-    position: relative;
     width: 460px;
     height: 200px;
 }
-
+.deal-card a{
+ margin-top: -34px;
+}
 .deal-img {
-    position: absolute;
-    left: 30px;
-    top: -20px;
-    width: 120px;
-    height: 120px;
+    width: 150px;
+    height: 180px;
     border-radius: 10px;
+    margin: 10px 0 0 10px;
+}
+.deal-text h1{
+  font-family: 'Amatic SC', cursive ;
+  color:white;
+  margin-left: auto;
+  margin: 25px;
+  font-size: 40px;
+}
+.col-8 .card-body{
+  color: black;
+}
+
+/* control image height */
+.card-img-top-250 {
+  max-height: 250px;
+  overflow:hidden;
+}
+mdb-carousel-item{
+  align-content: center;
+  justify-content: center;
+  // display: flex;
 }
