login n guide-home

--- a/src/app/modules/guide/components/deals/deals.component.html
+++ b/src/app/modules/guide/components/deals/deals.component.html
@@ -1,157 +1,166 @@
-<div *ngIf="!createDeal" class="row">
-  <div class="col-md-12">
-    <button type="button" mdbBtn (click)="this.createDeal = true" color="default" class="btn  float-right btn-lg">Create Deal</button>
-  </div>
+<div class="mb-5 dealtop">
+    <div class="row">
+        <div class="col-6">
+
+            <div class="create-font mx-5 mb-2 text-center">Create your deals</div>
+            <div class="mx-5 text-center">Let Voila help you make your own tour package/deal according to your preferences</div>
+
+            <div *ngIf="!createDeal" class="text-center my-4">
+                <button type="button" mdbBtn (click)="this.createDeal = true" style="background-color:#faed26;" class="btn btn-lg" mdbWavesEffect>Create Deal</button>
+            </div>
+        </div>
+        <div class="col-6">
+            <img src="assets\images\abstract-success.png" class="float-right my-4" style="height: 300px; width:auto">
+        </div>
+    </div>
 </div>
 
 <div *ngIf="createDeal" class="card">
-  <div class="card-body pb-0">
-    <h1 class="card-title">Create Your Deal</h1>
-  </div>
-  <hr class="mt-0 mx-3">
-  
-  <form [formGroup]="dealForm" (ngSubmit)="submitDeal()">
-  
-    <div class="row card-body pb-0">
-      <div class="col">
-      
-        <div class="form-group">
-        <!-- <mdb-icon fas icon="city" class="prefix"></mdb-icon> -->
-        <!-- <input mdbInput type="text" id="form0" class="form-control"> -->
-        <label for="form0"><mdb-icon fas icon="city" class="prefix"></mdb-icon> State</label><br>
-        <select class="form-control" id="form0" formControlName="state" class="browser-default custom-select" #state
-          (change)="getAllCity(state.value)">
+    <div class="card-body pb-0">
+        <h1 class="card-title">Create Your Deal</h1>
+    </div>
+    <hr class="mt-0 mx-3">
+
+    <form [formGroup]="dealForm" (ngSubmit)="submitDeal()">
+
+        <div class="row card-body pb-0">
+            <div class="col">
+
+                <div class="form-group">
+                    <!-- <mdb-icon fas icon="city" class="prefix"></mdb-icon> -->
+                    <!-- <input mdbInput type="text" id="form0" class="form-control"> -->
+                    <label for="form0"><mdb-icon fas icon="city" class="prefix"></mdb-icon> State</label><br>
+                    <select class="form-control" id="form0" formControlName="state" class="browser-default custom-select" #state (change)="getAllCity(state.value)">
           <option value="" disabled>Select State</option>
           <option *ngFor="let item of stateList" [value]="item.id"> {{ item?.name }}</option>
         </select>
 
-      </div> 
-      </div>
-       
-      <div class="col">
-      
-        <div class="form-group">
-        <!-- <input mdbInput type="text" id="form1" class="form-control"> -->
-        <label for="form1"><mdb-icon fas icon="city" class="prefix"></mdb-icon> City</label>
-        <select formControlName="city" class="form-control" class="browser-default custom-select" id="form1">
+                </div>
+            </div>
+
+            <div class="col">
+
+                <div class="form-group">
+                    <!-- <input mdbInput type="text" id="form1" class="form-control"> -->
+                    <label for="form1"><mdb-icon fas icon="city" class="prefix"></mdb-icon> City</label>
+                    <select formControlName="city" class="form-control" class="browser-default custom-select" id="form1">
           <option value="" disabled>Select City</option>
           <option *ngFor="let item of cityList" [value]="item.name"> {{ item?.name }}</option>
         </select>
-      </div> 
-      </div>
+                </div>
+            </div>
 
-      <div class="col">
-      <div class="form-group">
-        <!-- <mdb-icon fas icon="dollar-sign" class="prefix"></mdb-icon> -->
-        <label for="form2"><mdb-icon fas icon="dollar-sign" class="prefix"></mdb-icon> Price</label>
-        <input formControlName="price" type="number" placeholder="price " id="form2" class="form-control">
-        <!-- <label for="form2">Price</label> -->
-      </div>
-      
-      </div>
-       </div>
-      
-      <div class="row card-body pb-0">
-        <div class="col">
-          <!-- <div class="row"> -->
-            <!-- <div class="col-6"> -->
-               <div class="form-group">
-                <label for="form3"><mdb-icon fas icon="calendar-alt" class="prefix"></mdb-icon> From</label>
-                <input formControlName="startDate" type="date" id="form3" class="form-control">
-          
-        </div> 
+            <div class="col">
+                <div class="form-group">
+                    <!-- <mdb-icon fas icon="dollar-sign" class="prefix"></mdb-icon> -->
+                    <label for="form2"><mdb-icon fas icon="dollar-sign" class="prefix"></mdb-icon> Price</label>
+                    <input formControlName="price" type="number" placeholder="price " id="form2" class="form-control">
+                    <!-- <label for="form2">Price</label> -->
+                </div>
+
+            </div>
+        </div>
+
+        <div class="row card-body pb-0">
+            <div class="col">
+                <!-- <div class="row"> -->
+                <!-- <div class="col-6"> -->
+                <div class="form-group">
+                    <label for="form3"><mdb-icon fas icon="calendar-alt" class="prefix"></mdb-icon> From</label>
+                    <input formControlName="startDate" type="date" id="form3" class="form-control">
+
+                </div>
             </div>
             <div class="col">
-              <div class="form-group">
-         <label for="form4"><mdb-icon fas icon="calendar-alt" class="prefix"></mdb-icon> To</label>
-         <input formControlName="endDate" type="date" id="form4" class="form-control">
-       </div> 
-           <!-- </div> -->
-          <!-- </div> -->
-      
-         
-        </div>
-         
-        <div class="col">
-        <div class="form-group">
-          
-          <label for="form5"><mdb-icon fas icon="users" class="prefix"></mdb-icon> People limit</label>
-          <input  formControlName="peopleLimit" type="number" placeholder="people limit" id="form5" class="form-control">
-        </div>
-        
-        </div>
-         </div>
+                <div class="form-group">
+                    <label for="form4"><mdb-icon fas icon="calendar-alt" class="prefix"></mdb-icon> To</label>
+                    <input formControlName="endDate" type="date" id="form4" class="form-control">
+                </div>
+                <!-- </div> -->
+                <!-- </div> -->
 
-         <div class="row card-body pb-0" formArrayName="places">
-           <div class="col-md-7">
-            <label for="form6"><mdb-icon fas icon="map-marker-alt" class="prefix"></mdb-icon> Locations</label>
-            <div class="row" *ngFor="let places of dealForm.get('places').controls; let i= index">
-              <div class="col-md-10">
-              <div class="form-group" >
-                <input  [formControlName]="i" placeholder="location" type="text" class="form-control">
-                
-              </div>
-              </div>
-              <div class="col-md-2">
-                <button type="button" (click)="removeLocation(i)" style="margin: auto" class="btn btn-md btn-danger">
+
+            </div>
+
+            <div class="col">
+                <div class="form-group">
+
+                    <label for="form5"><mdb-icon fas icon="users" class="prefix"></mdb-icon> People limit</label>
+                    <input formControlName="peopleLimit" type="number" placeholder="people limit" id="form5" class="form-control">
+                </div>
+
+            </div>
+        </div>
+
+        <div class="row card-body pb-0" formArrayName="places">
+            <div class="col-md-7">
+                <label for="form6"><mdb-icon fas icon="map-marker-alt" class="prefix"></mdb-icon> Locations</label>
+                <div class="row" *ngFor="let places of dealForm.get('places').controls; let i= index">
+                    <div class="col-md-10">
+                        <div class="form-group">
+                            <input [formControlName]="i" placeholder="location" type="text" class="form-control">
+
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" (click)="removeLocation(i)" style="margin: auto" class="btn btn-md btn-danger">
                   <mdb-icon fas icon="cut" class="prefix"></mdb-icon>
                 </button>
-              </div>
+                    </div>
 
-              
-            </div>
-            <button class="btn btn-default" type="button" (click)="addLocations()">
+
+                </div>
+                <button class="btn btn-default" type="button" (click)="addLocations()">
               <mdb-icon fas icon="map-marker-alt" class="prefix"></mdb-icon> Add More
             </button>
-           </div>
-         </div>
+            </div>
+        </div>
 
-         <div class="row pr-3 pb-3">
-           <div class="col-md-12">
-            <button mdbBtn type="button" color="unique" 
-              (click)="this.createDeal = false; this.createForm()"  
-              mdbWavesEffect class="float-right">Cancel &nbsp;
+        <div class="row pr-3 pb-3">
+            <div class="col-md-12">
+                <button mdbBtn type="button" color="unique" (click)="this.createDeal = false; this.createForm()" mdbWavesEffect class="float-right">Cancel &nbsp;
               <mdb-icon fas icon="cut"></mdb-icon>
             </button>
-            <button mdbBtn type="submit" color="secondary"  mdbWavesEffect class="float-right">Create &nbsp;<mdb-icon fas icon="check"></mdb-icon></button>
-           </div>
-         </div>
-        </form>
-  
+                <button mdbBtn type="submit" color="secondary" mdbWavesEffect class="float-right">Create &nbsp;<mdb-icon fas icon="check"></mdb-icon></button>
+            </div>
+        </div>
+    </form>
+
 </div>
 
 <!--  -->
+<div class="mx-5 mb-5">
+    <h1>Your Deals</h1>
 
-<h1>Your Deals</h1>
+    <!-- <div class="w-50 p-2"> -->
+    <div class="row">
+        <div class="col-md-4" *ngFor="let deal of DealsList">
+            <mdb-card>
+                <div class="img-fav">
+                    <!-- <i class="far fa-heart fa-lg"></i> -->
+                    <!--Card image-->
+                    <mdb-card-img class="main-img" src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
+                    <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
+                    <h5><span class="badge badge-default font-weight-normal">{{deal.city}} tour with Barkha Joshi</span></h5>
+                </div>
+                <!--Card content-->
+                <mdb-card-body>
+                    <!--Title-->
+                    <mdb-card-title>
+                        <h5><strong>{{deal.places[0]}} Tour</strong></h5>
+                    </mdb-card-title>
 
-<!-- <div class="w-50 p-2"> -->
-<div class="row">
-  <div class="col-md-4" *ngFor="let deal of DealsList">
-    <mdb-card>
-      <div class="img-fav">
-          <!-- <i class="far fa-heart fa-lg"></i> -->
-          <!--Card image-->
-          <mdb-card-img class="main-img" src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
-          <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
-          <h5><span class="badge badge-default font-weight-normal">{{deal.city}} tour with Barkha Joshi</span></h5>
-      </div>
-      <!--Card content-->
-      <mdb-card-body>
-          <!--Title-->
-          <mdb-card-title>
-              <h5><strong>{{deal.places[0]}} Tour</strong></h5>
-          </mdb-card-title>
+                    <!--Text-->
+                    <mdb-card-text>
+                        <div>{{deal.places.toString()}}.</div>
+                        <div>&#x20b9;{{deal.price}} pp &#8226; From {{deal.startDate | date: 'dd-MM-yy'}} &#8226; To {{deal.endDate | date: 'dd-MM-yy'}}</div>
+                    </mdb-card-text>
 
-          <!--Text-->
-          <mdb-card-text>
-              <div>{{deal.places.toString()}}.</div>
-              <div>&#x20b9;{{deal.price}} pp &#8226; From {{deal.startDate | date: 'dd-MM-yy'}} &#8226; To {{deal.endDate | date: 'dd-MM-yy'}}</div>
-          </mdb-card-text>
-
-          <!-- <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a> -->
-      </mdb-card-body>
-  </mdb-card>
-  </div>
+                    <!-- <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a> -->
+                </mdb-card-body>
+            </mdb-card>
+        </div>
+    </div>
 </div>
 <!-- </div> -->
 
