--- a/src/app/modules/guide/pages/show-register/show-register.component.html
+++ b/src/app/modules/guide/pages/show-register/show-register.component.html
@@ -107,7 +107,7 @@
         <div class="col-4 px-3">
             <div class="text-left" style=" position:relative; font-size:65px; font-weight: 800;">1
 
-                <strong style="position:absolute; font-size:30px; font-weight: 200;">Create your Voila account</strong>
+                <strong style="position:absolute; top: 25%; font-size:30px; font-weight: 200;">Create your Voila account</strong>
             </div>
 
             <div style="font-size:18px;">
