--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,3 +35,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   ::-webkit-scrollbar-thumb:window-inactive {
     background-color: #64b5f6;
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
