--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -1,70 +1,66 @@
-<app-header [loggingIn]="true"></app-header>
+<!-- side navbar -->
+<div class="row" style="overflow: hidden;">
 
-
-<div class="row" style="margin: 50px;">
-    <div class="col-md-12">
-        <!-- <div class="card">
-      <div class="card-body">
-        This is some text within a panel body.
-      </div>
-    </div><br> -->
-
-        <div class="row">
-            <div class="col-md-3 col-sm-3">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="img-fluid z-depth-1 rounded-circle" alt="Responsive image">
-                        <br>
-                        <div class="guid-name">
-                            <b>Full Name</b>
-                        </div>
-                        <!-- <div class="btn-group" mdbDropdown style="margin-top: 10px;">
-              <button mdbDropdownToggle type="button" mdbBtn color="default" outline="true" class="dropdown-toggle waves-light"
-                mdbWavesEffect>
-                <b>Name</b>
-              </button>
-            
-              <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" >EditProfile</a>
-                <a class="dropdown-item" >Manage</a>
-                <a class="dropdown-item" >Logout</a>
-              </div>
-            </div> -->
-                        <!-- <br> -->
-                        <!-- <br> -->
+    <div class="col-2">
+        <div class="navside all-style">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="img-fluid z-depth-1 rounded-circle mt-3" alt="Responsive image">
+                    <br>
+                    <div class="guide-name">
+                        <b>Full Name</b>
                     </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-12">
-
-                        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-
-                            <a class="nav-link" id="v-pills-bookings-tab" data-toggle="pill" [routerLink]="['bookings']" routerLinkActive="active" role="tab" aria-controls="v-pills-bookings" aria-selected="true">Bookings</a>
-
-                            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" [routerLink]="['requests']" routerLinkActive="active" role="tab" aria-controls="v-pills-home" aria-selected="true">Requests</a>
-
-                            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" [routerLink]="['messages']" routerLinkActive="active" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
-
-                            <a class="nav-link" id="v-pills-activities-tab" data-toggle="pill" [routerLink]="['activities']" routerLinkActive="active" role="tab" aria-controls="v-pills-activities" aria-selected="false">Recent Activities</a>
-
-                            <a class="nav-link" id="v-pills-deals-tab" data-toggle="pill" [routerLink]="['deals']" routerLinkActive="active" role="tab" aria-controls="v-pills-deals" aria-selected="false">Your Deals</a>
-
-                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" [routerLink]="['editProfile']" routerLinkActive="active" role="tab" aria-controls="v-pills-profile" aria-selected="false">Edit Profile</a>
-
-                            <a class="nav-link" id="v-pills-changepwd-tab" data-toggle="pill" [routerLink]="['changepassword']" routerLinkActive="active" role="tab" aria-controls="v-pills-changepwd" aria-selected="false">Change Password
-            </a>
-
-                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" role="tab" (click)="logout()" aria-controls="v-pills-profile" aria-selected="false">Logout</a>
-                        </div>
-
-                    </div>
+                    <!-- <div class="btn-group" mdbDropdown style="margin-top: 10px;">
+          <button mdbDropdownToggle type="button" mdbBtn color="default" outline="true" class="dropdown-toggle waves-light"
+            mdbWavesEffect>
+            <b>Name</b>
+          </button>
+        
+          <div class="dropdown-menu dropdown-menu-right">
+            <a class="dropdown-item" >EditProfile</a>
+            <a class="dropdown-item" >Manage</a>
+            <a class="dropdown-item" >Logout</a>
+          </div>
+        </div> -->
+                    <!-- <br> -->
+                    <!-- <br> -->
                 </div>
             </div>
-            <div class="col-md-9 col-sm-9">
-                <router-outlet></router-outlet>
-            </div>
 
+            <div class="row">
+                <div class="col-md-12">
+
+                    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+
+                        <a class="nav-link" id="v-pills-bookings-tab" data-toggle="pill" [routerLink]="['bookings']" routerLinkActive="active" role="tab" aria-controls="v-pills-bookings" aria-selected="true">Bookings</a>
+
+                        <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" [routerLink]="['requests']" routerLinkActive="active" role="tab" aria-controls="v-pills-home" aria-selected="true">Requests</a>
+
+                        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" [routerLink]="['messages']" routerLinkActive="active" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+
+                        <a class="nav-link" id="v-pills-activities-tab" data-toggle="pill" [routerLink]="['activities']" routerLinkActive="active" role="tab" aria-controls="v-pills-activities" aria-selected="false">Recent Activities</a>
+
+                        <a class="nav-link" id="v-pills-deals-tab" data-toggle="pill" [routerLink]="['deals']" routerLinkActive="active" role="tab" aria-controls="v-pills-deals" aria-selected="false">Your Deals</a>
+
+                        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" [routerLink]="['editProfile']" routerLinkActive="active" role="tab" aria-controls="v-pills-profile" aria-selected="false">Edit Profile</a>
+
+                        <a class="nav-link" id="v-pills-changepwd-tab" data-toggle="pill" [routerLink]="['changepassword']" routerLinkActive="active" role="tab" aria-controls="v-pills-changepwd" aria-selected="false">Change Password
+        </a>
+
+                        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" role="tab" (click)="logout()" aria-controls="v-pills-profile" aria-selected="false">Logout</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- main content on the right -->
+    <div class="col-10 main">
+        <app-header [loggingIn]="true"></app-header>
+        <div>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
