--- a/src/app/modules/home/top-cities/top-cities.component.html
+++ b/src/app/modules/home/top-cities/top-cities.component.html
@@ -1,4 +1,4 @@
-<owl-carousel-o [options]="customOptions">
+<!-- <owl-carousel-o [options]="customOptions">
   <ng-template carouselSlide>
       <div class="slide">
           <img src="https://i.picsum.photos/id/905/400/300.jpg">
@@ -24,4 +24,76 @@
           <img src="https://i.picsum.photos/id/1054/400/300.jpg">
       </div>
   </ng-template>
-</owl-carousel-o>
+</owl-carousel-o> -->
+
+<div class="row">
+    <div class=" col-md-3">
+        <div class="trending px-2 my-3">
+            <div>TRENDING</div>
+            <div>DESTINATIONS</div>
+        </div>
+    </div>
+    <div class="col-md-9">
+        <div class="row">
+
+
+            <div class="col-md-4">
+                <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
+                    <mdb-card-body class="waves-effect waves-light">
+                        <div class="white-text">
+                            <mdb-card-title>
+                                <h4>Jaipur, Rajasthan</h4>
+                            </mdb-card-title>
+                            <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
+                                <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
+                            </mdb-card-text>
+                            <div class="text-center">
+                                <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
+                                <a class="card-link p-2" style="border:1px solid white; ">View More</a>
+                            </div>
+                        </div>
+
+                    </mdb-card-body>
+                </mdb-card>
+            </div>
+            <div class="col-md-4">
+                <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
+                    <mdb-card-body class="waves-effect waves-light">
+                        <div class="white-text">
+                            <mdb-card-title>
+                                <h4>Jaipur, Rajasthan</h4>
+                            </mdb-card-title>
+                            <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
+                                <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
+                            </mdb-card-text>
+                            <div class="text-center">
+                                <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
+                                <a class="card-link p-2" style="border:1px solid white; ">View More</a>
+                            </div>
+                        </div>
+
+                    </mdb-card-body>
+                </mdb-card>
+            </div>
+            <div class="col-md-4">
+                <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
+                    <mdb-card-body class="waves-effect waves-light">
+                        <div class="white-text">
+                            <mdb-card-title>
+                                <h4>Jaipur, Rajasthan</h4>
+                            </mdb-card-title>
+                            <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
+                                <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
+                            </mdb-card-text>
+                            <div class="text-center">
+                                <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
+                                <a class="card-link p-2" style="border:1px solid white; ">View More</a>
+                            </div>
+                        </div>
+
+                    </mdb-card-body>
+                </mdb-card>
+            </div>
+        </div>
+    </div>
+</div>
