--- a/src/app/shared/components/login-page/login-page.component.html
+++ b/src/app/shared/components/login-page/login-page.component.html
@@ -1,94 +1,157 @@
-<div class="container">
-  <h1>Logo work or any other thing</h1>
-  <div class="row">
-  <div class="col-md-12" >
+<!-- <div class="container">
+    <h1>Logo work or any other thing</h1>
+    <div class="row">
+        <div class="col-md-12">
 
-    <!-- Card -->
-<mdb-card>
-  <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-    <a>
-      <div class="mask"></div>
-    </a>
-  </div>
-  <mdb-card-title>
-    <h1 class="center-class" >Voila</h1> 
-  </mdb-card-title>
-  <!--Card content-->
-  <mdb-card-body>
-    <!--Title-->
-    <ul class="nav nav-tabs center-class" id="myTab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#tourist" role="tab" aria-controls="home"
-          aria-selected="true"><h3>Tourist</h3></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#guide" role="tab" aria-controls="profile"
-          aria-selected="false"><h3>Guide</h3></a>
-      </li>
-      
-    </ul>
-    <!--  -->
-    <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade show active" id="tourist" role="tabpanel" aria-labelledby="home-tab">
-        <br>
-        <form [formGroup]="LoginForm">
-          <div class="md-form form-group">
-            <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
-            <input mdbInput type="email" formControlName="email" id="form2" class="form-control">
-            <label for="form2">Email</label>
-            <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )"
-              id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
-          </div>
-          <br>
-          <div class="md-form form-group">
-            <mdb-icon fas icon="unlock-alt" class="prefix"></mdb-icon>
-            <input mdbInput type="password" formControlName="password" id="form2" class="form-control">
-            <label for="form2">password</label>
-            <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )"
-              id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>          
-          </div>
-          <br>
-          <div class="md-form form-group">
-            <button type="submit" class="btn btn-success" (click)="login('tourist')" >Login</button>
-          </div>
-        </form>
-        <a>Are you a guide? Register now</a>
-      </div>
-      <!--  -->
-      <div class="tab-pane fade" id="guide" role="tabpanel" aria-labelledby="profile-tab">
-        <br>
-        <form [formGroup]="LoginForm">
-          <div class="md-form form-group">
-            <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
-            <input mdbInput type="email" formControlName="email" id="form2" class="form-control">
-            <label for="form2">Email</label>
-            <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )"
-              id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
-          </div>
-          <br>
-          <div class="md-form form-group">
-            <mdb-icon fas icon="unlock-alt" class="prefix"></mdb-icon>
-            <input mdbInput type="password" id="form2" formControlName="password" class="form-control">
-            <label for="form2">password</label>
-            <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )"
-              id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
-            <!-- <a href="#" mdbBtn color="primary" mdbWavesEffect>Login</a> -->
-          </div>
-          <br>
-          <div class="md-form form-group">
-            <button type="submit" class="btn btn-success" (click)="login('guide')">Login</button>
-          </div>
-        </form>
-        <a>Wanna explore? Register now</a>
-      </div>
-      
+            Card
+            <mdb-card class="mx-auto">
+                <div class="view rgba-white-slight waves-light" mdbWavesEffect>
+                    <a>
+                        <div class="mask"></div>
+                    </a>
+                </div>
+                <mdb-card-title>
+                    <h1 class="center-class">Voila</h1>
+                </mdb-card-title>
+                Card content
+                <mdb-card-body>
+                    Title
+                    <ul class="nav nav-pills center-class" id="myTab" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#tourist" role="tab" aria-controls="home" aria-selected="true">
+                                <h3>Tourist</h3>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#guide" role="tab" aria-controls="profile" aria-selected="false">
+                                <h3>Guide</h3>
+                            </a>
+                        </li>
+
+                    </ul>
+                  
+                    <div class="tab-content" id="myTabContent">
+                        <div class="tab-pane fade show active" id="tourist" role="tabpanel" aria-labelledby="home-tab">
+                            <br>
+                            <form [formGroup]="LoginForm">
+                                <div class="md-form form-group">
+                                    <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+                                    <input mdbInput type="email" formControlName="email" id="form9" class="form-control">
+                                    <label for="form9">Email</label>
+                                    <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+                                </div>
+                                <br>
+                                <div class="md-form form-group">
+                                    <mdb-icon fas icon="unlock-alt" class="prefix"></mdb-icon>
+                                    <input mdbInput type="password" formControlName="password" id="form9" class="form-control">
+                                    <label for="form9">password</label>
+                                    <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+                                </div>
+                                <br>
+                                <div class="md-form form-group text-center">
+                                    <button type="submit" class="btn btn-success" (click)="login('tourist')">Login</button>
+                                </div>
+                            </form>
+                            <a>Are you a guide? Register now</a>
+                        </div>
+                       
+                        <div class="tab-pane fade" id="guide" role="tabpanel" aria-labelledby="profile-tab">
+                            <br>
+                            <form [formGroup]="LoginForm">
+                                <div class="md-form form-group">
+                                    <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+                                    <input mdbInput type="email" formControlName="email" id="form2" class="form-control">
+                                    <label for="form2">Email</label>
+                                    <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+                                </div>
+                                <br>
+                                <div class="md-form form-group">
+                                    <mdb-icon fas icon="unlock-alt" class="prefix"></mdb-icon>
+                                    <input mdbInput type="password" id="form2" formControlName="password" class="form-control">
+                                    <label for="form2">password</label>
+                                    <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+                                   Commented out a link <a href="#" mdbBtn color="primary" mdbWavesEffect>Login</a>
+                                </div>
+                                <br>
+                                <div class="md-form form-group text-center">
+                                    <button type="submit" class="btn btn-success" (click)="login('guide')">Login</button>
+                                </div>
+                            </form>
+                            <a>Wanna explore? Register now</a>
+                        </div>
+
+                    </div>
+                  
+                </mdb-card-body>
+            </mdb-card>
+            Card
+        </div>
     </div>
-    <!--  -->
-  </mdb-card-body>
-</mdb-card>
-<!-- Card -->
-  </div>
-</div>
 
 
+</div> -->
+
+<div class="container mb-5">
+    <div class="welcome">
+        <div class="pinkbox">
+            <div class="signup nodisplay" id="guide">
+                <h1>Guide Sign in</h1>
+                <form [formGroup]="LoginForm" autocomplete="off">
+                    <div class="md-form form-group">
+                        <input mdbInput type="email" formControlName="email" id="form1" class="form-control">
+                        <label for="form1">Email</label>
+                        <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+                    </div>
+                    <div class="md-form form-group">
+                        <input mdbInput type="password" formControlName="password" id="form2" class="form-control">
+                        <label for="form2">password</label>
+                        <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+                    </div>
+                    <!-- <input type="password" placeholder="confirm password"> -->
+                    <div class="">
+                        <button type="submit" class="button submit" (click)="login('guide')">Log in</button>
+                    </div>
+                </form>
+                <div class="text-center white-text"><a>Are you a guide? Register now</a></div>
+            </div>
+            <div class="signin" id="tourist">
+                <h1>sign in</h1>
+                <form [formGroup]="LoginForm" class="more-padding" autocomplete="off">
+                    <div class="md-form form-group">
+                        <input mdbInput type="email" formControlName="email" id="form3" class="form-control">
+                        <label for="form3">Email</label>
+                        <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+                    </div>
+                    <div class="md-form form-group">
+                        <input mdbInput type="password" formControlName="password" id="form4" class="form-control">
+                        <label for="form4">password</label>
+                        <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+                    </div>
+                    <!-- <div class="checkbox">
+                        <input type="checkbox" id="remember" /><label for="remember">remember me</label>
+                    </div> -->
+                    <div class="md-form form-group text-center my-0 pt-">
+                        <button type="submit" class="button submit mx-auto" (click)="login('tourist')">login</button>
+                    </div>
+                </form><br>
+                <div class="text-center white-text"><a>Wanna explore? Register now</a></div>
+            </div>
+        </div>
+        <div class="leftbox">
+            <h2 class="title"><span>VOILA</span>&<br>Tourist</h2>
+            <p class="desc">pick your perfect <span>bouquet</span></p>
+            <img class="flower smaller" src="https://image.ibb.co/d5X6pn/1357d638624297b.jpg" alt="1357d638624297b" border="0">
+            <p class="account">Are you a traveller</p>
+            <button class="button" id="signin">Log in</button>
+        </div>
+        <div class="rightbox">
+            <h2 class="title"><span>VOILA</span>&<br>Guide</h2>
+            <p class="desc"> pick your perfect <span>bouquet</span></p>
+            <img class="flower" src="assets\images\tourist-ouch-pic-medium.png" />
+            <p class="account">Are you a guide?</p>
+            <button class="button" id="signup">LOg in</button>
+        </div>
+    </div>
 </div>
+
+<!-- green guide pic attribution <a href='https://www.freepik.com/free-photos-vectors/travel'>Travel vector created by stories - www.freepik.com</a> -->
