--- a/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
+++ b/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
@@ -1,5 +1,5 @@
 <div class="row all">
-  <div class="col-8">
+  <div class="col-8" style = "position: relative; overflow:hidden;">
     <div class="container-fluid px-5">
   <div class="card">
     <div class="row  check pb-0 card-body">
