archit push krra h

--- a/src/app/modules/guide/pages/guide-home/guide-home.component.scss
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.scss
@@ -1,6 +1,7 @@
 .navside {
     height: 100%;
     position: fixed;
+    overflow: -moz-hidden-unscrollable;
     width: 250px;
     z-index: 1;
     left: 0;
