--- a/src/app/modules/home/frontpage/frontpage.component.html
+++ b/src/app/modules/home/frontpage/frontpage.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12" style="overflow: hidden; width: inherit;" >
       <app-map></app-map>
     </div>
   </div>
