--- a/src/app/modules/home/map/map.component.scss
+++ b/src/app/modules/home/map/map.component.scss
@@ -20,5 +20,8 @@
     color: white;
 }
 .row{
-  background-color: rgb(56,50,48);
+  background-color: rgb(0, 0, 0);
+}
+.col-md-6{
+  padding: 0px;
 }
