--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -40,8 +40,8 @@
       </tr>
     </tbody>
   </table> -->
-  
-  
+
+
 
 
 <!-- /table -->
@@ -94,7 +94,7 @@
                     </div>
                 </div>
 
-            </div> 
+            </div>
             <!-- <div>Booking Date: March 25,2020</div> -->
          </div>
 
@@ -103,44 +103,44 @@
         <a href="#!">View more</a>
         <button class="float-right footer-btn" style="margin: auto; " color="danger" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>CANCEL BOOKING</b></button>
     </mdb-card-footer>
-</mdb-card> 
+</mdb-card>
 
 <!-- <mdb-card> -->
     <!--Card content-->
 
     <!--  -->
-    
+
    <mdb-card class="mb-3" *ngFor="let booking of bookingsList">
       <mdb-card>
           <mdb-card-body>
               <div class="row">
-                  <div class="col-md-10">
+                  <div class="col-md-9">
                    <mdb-card-title>
                 <h4><mdb-icon fas icon="suitcase" style="color: rgba(233, 30, 99, 0.7);" ></mdb-icon> &nbsp; {{booking.guideId?.city}}, India with {{booking.guideId?.name}}</h4>
               </mdb-card-title> </div>
-              <div class="col-md-2">
-                <button mdbBtn type="button" size="sm" color="pink" (click)="contactGuide(booking.guideId.email)" mdbWavesEffect>Contact Guide</button>
+              <div class="col-md-3" style="padding: 0;">
+                <button mdbBtn type="button" size="sm" color="pink" style="margin-top: -6px;" (click)="contactGuide(booking.guideId.email)" mdbWavesEffect>Contact Guide</button>
               </div>
-          
+
         </div>
               <!--Text-->
-              <mdb-card-text> 
-                  Approved booking by the guide under Voils <a href="">terms and condition</a> contact your 
+              <mdb-card-text>
+                  Approved booking by the guide under Voils <a href="">terms and condition</a> contact your
                   guide for any booking related quary.
 
                   <p>{{booking.places.toString()}}</p>
                   <p class="mb-0"><a style="color: rgba(233, 30, 99, 0.7);" (click)="test1.toggle()">View more</a></p>
-                  
-              </mdb-card-text> 
-          
-           
+
+              </mdb-card-text>
+
+
   </mdb-card-body>
       </mdb-card>
   <div mdbCollapse [isCollapsed]="true" #test1="bs-collapse">
       <mdb-card>
     <mdb-card-body >
         <!--Text-->
-        <mdb-card-text> 
+        <mdb-card-text>
           <div class="row">
               <div class="col-md-4">
                  <h5>From</h5> {{booking.startDate | date: 'dd-MM-yy'}}
@@ -151,7 +151,7 @@
             <div class="col-md-4">
                  <h5>Tour Type</h5> {{booking.tourType}}
             </div>
-              
+
           </div>
           <br>
           <div class="row">
@@ -164,10 +164,10 @@
           <div class="col-md-4">
                <h5>People</h5> <i class="fas fa-user-friends"></i> {{booking.noOfPeople}}
           </div>
-            
+
         </div>
-        
-      </mdb-card-text>   
+
+      </mdb-card-text>
       </mdb-card-body>
     </mdb-card>
   </div>
