--- a/src/app/modules/tourists/pages/register/register.component.html
+++ b/src/app/modules/tourists/pages/register/register.component.html
@@ -1,12 +1,13 @@
 <div class="bg mt-0 pt-0">
+  <br><br><br>
     <div class="card register-card mx-auto my-auto">
         <div class="row">
-            <div class="col-7 p-5">
+            <div class="col-12 p-5">
                 <!-- Card content -->
 
 
                 <!-- Title -->
-                <h2 class="card-title">Sign up</h2>
+                <h2 style="font-size: 50px;" class="card-title">Sign up</h2>
                 <form [formGroup]="detailsForm" (ngSubmit)="submitForm()">
                 <div class="card-text">
                     <!--  -->
@@ -25,7 +26,7 @@
                             <div class="form-group">
                                 <label for="form2">Full Name</label>
                                 <input type="text" formControlName="name" id="form2" class="form-control">
-                                
+
                             </div>
                         </div>
                     </div>
@@ -34,10 +35,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group mb-0">
-                                <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+                                <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>&nbsp;
                                 <label for="form5">Email</label>
                                 <input type="email" id="form5" formControlName="email" class="form-control">
-                                
+<br>
                             </div>
                         </div>
                     </div>
@@ -47,10 +48,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <mdb-icon fas icon="phone-alt" class="prefix"></mdb-icon>
+                                <mdb-icon fas icon="phone-alt" class="prefix"></mdb-icon>&nbsp;
                                 <label for="form4">Your Phone Number</label>
                                 <input type="text" id="form4" formControlName="phoneNumber" class="form-control">
-                                
+
                             </div>
                         </div>
                     </div>
@@ -60,18 +61,18 @@
                     <div class="row mt-0 pt-0">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <mdb-icon fas icon="key" class="prefix"></mdb-icon>
+                                <mdb-icon fas icon="key" class="prefix"></mdb-icon>&nbsp;
                                 <label for="form6">Create Password</label>
                                 <input type="password" id="form6" formControlName="password" class="form-control">
-                                
+
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <mdb-icon fas icon="key" class="prefix"></mdb-icon>
+                                <mdb-icon fas icon="key" class="prefix"></mdb-icon>&nbsp;
                                 <label for="form7">Confirm Password</label>
                                 <input type="password" id="form7" formControlName="confirmPassword" class="form-control">
-                                
+
                             </div>
                         </div>
                     </div>
@@ -80,7 +81,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <mdb-icon far icon="calendar-alt" class="prefix"></mdb-icon>
+                                <mdb-icon far icon="calendar-alt" class="prefix"></mdb-icon>&nbsp;
                                 <label  for="form3">Date of Birth</label>
                                 <input type="date" id="form3" formControlName="dob" class="form-control">
                             </div>
@@ -91,7 +92,7 @@
                                 <select formControlName="nationality" class="browser-default custom-select">
                                     <option value="" disabled>Nationality</option>
                                     <option *ngFor="let item of countryList" [value]="item.name">{{item.name}}</option>
-                                    
+
                                 </select>
                             </div>
                         </div>
@@ -100,38 +101,33 @@
                     <div class="row">
                         <div class="col-md-12">
                             <label>Language</label>
-                            <input type="text" formControlName="languages" class="form-control"> 
+                            <input type="text" formControlName="languages" class="form-control">
                         </div>
 
                     </div>
-                    
-                    
+
+
 
 
 
                     <!-- Text -->
                     <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
                     </p> -->
-
+<br>
                     <div class="text-center">
-                        <button style="text-transform:none;" type="submit" class="btn pink darken-3 btn-rounded white-text">Sign up</button>
+                        <button style="text-transform:none; font-size: 30px; background: #553d67;" type="submit" class="btn btn-rounded white-text">Sign up</button>
                     </div>
                 </div>
             </form>
                 <!-- style="height: 550px; width:380px;" -->
             </div>
-            <div class="col-md-5">
-                <div class="justify-content-center d-flex align-self-center">
-                    <img src="https://images.unsplash.com/photo-1576557686977-eda3a3bb1ea2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" style=" width:380px; border-radius: 0px 10px 10px 0px" alt="Card image cap">
-                </div>
-                <!-- Card image -->
 
-            </div>
 
         </div>
         <!-- Card -->
     </div>
 
+    <br><br><br>
 
 </div>
 <!-- <div class="card mx-auto my-3" style="width:950px">
@@ -139,39 +135,39 @@
     <h1 class="card-title mx-4 mt-2">Choose your Interests</h1>
     <div class="d-flex flex-wrap mx-4 my-4">
         <div class="px-3 py-2">
-            
+
             <mdb-checkbox [default]="true">Adventure Sports</mdb-checkbox>
         </div>
         <div class="px-3 py-2">
-            
+
             <mdb-checkbox [default]="true">Shopping</mdb-checkbox>
         </div>
         <div class=" px-3 py-2">
-            
+
             <mdb-checkbox [default]="true">History</mdb-checkbox>
         </div>
-        
+
         <div class="px-3 py-2">
             <mdb-checkbox [default]="true">Art and Culture</mdb-checkbox>
         </div>
         <div class=" p-2">
-            
+
             <mdb-checkbox [default]="true">Nature</mdb-checkbox>
         </div>
         <div class="px-3 py-2">
-            
+
             <mdb-checkbox [default]="true">Photography</mdb-checkbox>
         </div>
         <div class="px-3 py-2">
-            
+
             <mdb-checkbox [default]="true">Technology</mdb-checkbox>
         </div>
         <div class="px-3 py-2">
-            
+
             <mdb-checkbox [default]="true">Food & Drinks</mdb-checkbox>
         </div>
         <div class="px-3 py-2">
-            
+
             <mdb-checkbox [default]="true">Wildlife</mdb-checkbox>
         </div>
     </div>
