--- a/src/app/modules/tourists/pages/tourists-home/tourists-home.component.html
+++ b/src/app/modules/tourists/pages/tourists-home/tourists-home.component.html
@@ -1,21 +1,17 @@
-<div class="row" style="margin: 50px;">
+<div class="row all" style="padding: 0; margin: 0;">
     <div class="col-md-12">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <!-- <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link " id="home-tab" data-toggle="tab" [routerLink]="['dashboard']" routerLinkActive="active" role="tab" aria-controls="home" aria-selected="true">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " id="bookings-tab" data-toggle="tab" [routerLink]="['bookings']" routerLinkActive="active" role="tab" aria-controls="bookings" aria-selected="true">Your Bookings</a>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link " id="requests-tab" data-toggle="tab" [routerLink]="['requests']" routerLinkActive="active" role="tab" aria-controls="requests" aria-selected="true">Your Requests</a>
-            </li> -->
+
             <li class="nav-item">
                 <a class="nav-link " id="messages-tab" data-toggle="tab" [routerLink]="['messages']" routerLinkActive="active" role="tab" aria-controls="messages" aria-selected="true">Messages</a>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link " id="histories-tab" data-toggle="tab" [routerLink]="['histories']" routerLinkActive="active" role="tab" aria-controls="histories" aria-selected="true">Previous Trips</a>
-            </li> -->
+
             <li class="nav-item">
                 <a class="nav-link" id="favourites-tab" data-toggle="tab" [routerLink]="['favourites']" routerLinkActive="active" role="tab" aria-controls="favourites" aria-selected="false">Favourites</a>
             </li>
@@ -32,12 +28,12 @@
                     <a class="dropdown-item waves-light" mdbWavesEffect>Logout</a>
                 </div>
             </li>
-        </ul>
+        </ul> -->
 
         <div class="row" style="margin: 40px 10px;">
-            <div class="col-md-12">
+            <div class="col-md-12" style="padding: 0;" >
                 <div class="tab-content" id="myTabContent">
-                    <router-outlet></router-outlet>
+                    <router-outlet ></router-outlet>
                 </div>
             </div>
         </div>
